fix svg overlap

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,9 @@ body {
 
 /* SVG Styling */
 svg {
-    position: relative; 
+    position: absolute; 
+    top: 0;
+    left: 0;
     width: 100%; 
     height: 100%; 
     border: 1px solid red; 
